  - Add a /ta install command, courtesy of Warriorrrr with PR #5303.
  - New Config Option: economy.daily_taxes.town_plotbased_upkeep_maximum_amount
    - Default: 0.0
    - If set to any amount over zero, if a town's plot-based upkeep totals more than this value, the town will pay the maximum instead.
  - Fix %townyadvanced_player_status% placeholder not using the placeholder colouring settings.
  - Bump language files to 0.124.
0.97.2.0:
  - Bump version for release.
0.97.2.1:
  - Tidy up PlayerCacheUtil.
  - Fix missing splitter between Nation bank and upkeep on the nation status screen.
  - New Placholder: %townyadvanced_town_board%
    - Displays a player's town's board message.
  - New Placeholder: %townyadvanced_nation_board%
    - Displays a player's nation's board message.
  - New Placeholder: %townyadvanced_player_location_town_board%
    - Displays the board message of the town where the player is stood.
  - New Placeholder: %townyadvanced_player_location_nation_board%
    - Displays the board message of the nation where the player is stood.
  - Add spawn protection for players who've just died.
  - New Config Node: global_town_settings.respawn_protection
    - Default; 10s
    - When greater than 0s, the amount of time a player who has respawned is considered invulnerable.
    - Invulnerable players who attacker other players will lose their invulnerability.
    - Invulnerable players who teleport after respawn will also lose their invulnerability.
  - Bump language files to 0.125.
  - Prevent spam if a player's locale is invalid, courtesy of Warriorrrr with PR #5314.
  - Improve startup logging/initialization, courtesy of ArticDive & LlmDl with PR #5299.
0.97.2.2:
  - Fix Citizens NPCs causing error on PlayerTeleportEvent, courtesy of ArticDive with PR #5319.
  - Change PlayerCacheUtil to once again check for a fakeplayer resident.
  - Fix PlayerCacheUtil preventing plot permissions from working properly. 