@@ -6769,3 +6769,4 @@ v0.92.0.11:
   - Fix Citizens NPCs causing error on PlayerTeleportEvent, courtesy of ArticDive with PR #5319.
   - Change PlayerCacheUtil to once again check for a fakeplayer resident.
   - Fix PlayerCacheUtil preventing plot permissions from working properly. 
+  - Fix missing command feedback on many /tw toggle commands.
